메시지 전송 및 조회 관련 API 스펙 구현